# harness-core

./: README.md  WORKSPACE  bazelrc.common  bazelrc.remote  buf.yaml  build.properties  protocol.info
.aeriform/: BUILD.bazel
.github/: CODEOWNERS
001-microservice-intfc-tool/: BUILD.bazel
100-migrator/: config.yml
110-change-data-capture/: BUILD.bazel
120-ng-manager/: BUILD.bazel  config.yml
123-ng-core-user/: BUILD.bazel
125-cd-nextgen/: BUILD.bazel
126-instance/: BUILD.bazel
127-cd-nextgen-beans/: BUILD.bazel
127-cd-nextgen-beans/src/main/java/io/harness/cdng/environment/yaml/: EnvironmentYamlV2.java
127-cd-nextgen-beans/src/main/java/io/harness/cdng/infra/beans/: AttributeFilter.java  PdcInfrastructureOutcome.java  ServerlessAwsInfrastructureOutcome.java
127-cd-nextgen-beans/src/main/java/io/harness/cdng/infra/yaml/: InfraStructureDefinition.java  InfrastructureKind.java
127-cd-nextgen-beans/src/main/java/io/harness/cdng/manifest/: ManifestStoreType.java  ManifestType.java
127-cd-nextgen-beans/src/main/java/io/harness/cdng/manifest/yaml/: ManifestOutcome.java  ServerlessAwsManifestOutcome.java
127-cd-nextgen-beans/src/main/java/io/harness/cdng/serverless/: ServerlessEntityHelper.java
127-cd-nextgen-beans/src/main/java/io/harness/cdng/service/beans/: ServiceSpecType.java
127-cd-nextgen-beans/src/main/java/io/harness/cdng/ssh/: SshEntityHelper.java
127-cd-nextgen-beans/src/main/java/io/harness/cdng/stepsdependency/constants/: OutcomeExpressionConstants.java
127-cd-nextgen-beans/src/main/java/io/harness/serializer/kryo/: NGBeanKryoRegistrar.java
127-cd-nextgen-beans/src/main/java/io/harness/serializer/morphia/: NGBeanMorphiaRegistrar.java
127-cd-nextgen-beans/src/test/java/io/harness/cdng/ssh/: SshEntityHelperTest.java
(+2672 files in other folders)
