load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
        "//127-cd-nextgen-beans/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//400-rest:module",
        "//860-orchestration-steps:module",  # This should be removed from here
        "//878-ng-common-utilities:module",
        "//879-pms-sdk:module",
        "//960-ng-license-usage-beans:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//127-cd-nextgen-beans/src/test/resources:resource",
    ],
    resources = [
        "//127-cd-nextgen-beans/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//:lombok",
        "//942-enforcement-sdk:module",
        "//955-delegate-beans:module",
        "//960-persistence:supporter-test",
        "//990-commons-test:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_api_mockito",
        "@maven//:org_powermock_powermock_module_junit4",
    ],
)

run_tests()

run_analysis()
